@@ -11,6 +11,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.doReturn;
@@ -44,6 +45,6 @@ class ImageServiceImplTest {
                         .map(m -> m.toBuilder()
                                 .image(savedImage)
                                 .build())
-                        .toList());
+                        .collect(Collectors.toList()));
     }
 }
